# TapList

./: .gitignore  .gitmodules  README.md
common_lib/: CMakeLists.txt
common_lib/include/: transcoder.h
common_lib/src/: common_lib.c
firm/: .gitignore  CMakeLists.txt
firm/main/: CMakeLists.txt  client.h  hello_world_main.c  main.c  main_definitions.h  rc522_reader.h  rc522_register_map.h  transcoder.h  wifi_credentials.example.h
firm/src/: main.cpp
frontend/: CMakeLists.txt  Makefile  a.out  admin.taplist  datatypes.h  first_try_ll_website_with_javascript.html  human_index.html  index.html  server.cpp  server.h  server.h.gch  storage.h
